--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,22 +3,7 @@
 - name: reload systemd unit files
   shell: systemctl daemon-reload
 
-- name: Initialize the GPUs
-  command: /bin/bash /usr/local/bin/cuda_init.sh
-  when:
-    - cuda_init
-    - cuda_init_restart_service
-
-- name: Restart cuda_init service
-  service:
-    name: cuda_init
-    state: restarted
-  when:
-    - cuda_init
-    - cuda_init_restart_service
-    - ansible_service_mgr == "systemd"
-
-- name: ZZ CUDA Restart server
+- name: CUDA Restart server
   command: sleep 2 && /sbin/shutdown -r now "Node software upgrade reboot"
   async: 1
   poll: 0
@@ -28,7 +13,7 @@
     - cuda_restart_node_on_install
 
 # define the variable running_as_ansible_pull in the ansible-pull playbook, like local.yml 
-- name: ZZ CUDA Wait for server to restart
+- name: CUDA Wait for server to restart
   wait_for:
     host: "{{ ansible_ssh_host | default(inventory_hostname) }}"
     state: started
